proof-of-concept almost works, it only fails when view has been modified by transforming it by its crop region
  I sometimes use this as well to quickly shift a view
  it is being used to rotate a view as well
presumably this affects transformation of the view in a way which viewport.GetProjectionToSheetTransform method doesn't account for
I'm looking for hints about these transformation in view element itself
  rather than on viewport
possibly it might get stored in view crop boundary as well
**** =14:43= script to print transformation of a view didn't show any difference before and after moving a view by its crop region, but script to print transformation of crop region did
**** =15:00= paused further attempts for now as I couldn't prompt chatgpt to account for cropbox transformation
*** 04
**** =19:25= fixed LogViewChanges
it kept cluttering revit-scripts folder
placing it into a separate folder and preventing it from logging if document if a family
  don't see a need for it in something as simple as a family
  looks like they were meant to be deleted OnDocumentClosing, but it didn't work
    then again why create them in the first place if they are going to be deleted
took me in total only about 20-30 minutes to finish implementing it
  feared it might have taken longer, because debugging of any potential issues would require restarting revit
***** affected commands
path change, folder added
- SwitchView, SwitchViewByHistory, SwitchToLastView
- CloseCurrentView, CloseViews
- OpenLastSessionViews
***** =19:55= tests
log files for families are correctly not being created
all commands continue working as intented
I've realized that "LogViewChanges -" prefix is now redundant as folder is used instead
  need to change that everywhere now again
  =20:05= finished updating and testing, all works fine
*** 09
**** =11:58= regression in customgui.datagrid2 searchbox
spacebar search AND operator stoppoed working - requries prompt fixing
customgui.datagrid1 works fine